# FreeVC

./: pyproject.toml
freevc/: __init__.py  data_utils.py  losses.py  utils.py
freevc/speaker_encoder/: audio.py  compute_embed.py  preprocess.py  visualizations.py
freevc/speaker_encoder/data_objects/: __init__.py  speaker.py  speaker_batch.py  speaker_verification_dataset.py
freevc/wavlm/: __init__.py
