[project]
name = "freevc"
version = "0.1.0"
description = "FreeVC: Towards High-Quality Text-Free One-Shot Voice Conversion"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy<2.0",
    "scipy",
    "huggingface-hub",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["freevc*"]
